--- a/index.html
+++ b/index.html
@@ -1,171 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>kabutihan</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>kabutihan</title>
 
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+      
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  </head>
+  <body>
+    <a href="">Ejay</a>
+    <a href="">Amiel</a>
+    <a href="">Justine</a>
+    <a href="">Nhel</a>
+  </body>
 
-  <!-- Icons -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-
-  <style>
-    body {
-      height: 100vh;
-      background: linear-gradient(135deg, #1e1e2f, #2a2a72, #009ffd);
-      background-size: 400% 400%;
-      animation: gradientFlow 10s ease infinite;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-family: 'Poppins', sans-serif;
-      overflow: hidden;
-    }
-
-    @keyframes gradientFlow {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
-    }
-
-    .login-card {
-      background: rgba(255, 255, 255, 0.1);
-      backdrop-filter: blur(15px);
-      border: 1px solid rgba(255, 255, 255, 0.2);
-      border-radius: 20px;
-      box-shadow: 0 0 40px rgba(0, 0, 0, 0.5);
-      width: 400px;
-      padding: 40px;
-      color: white;
-      position: relative;
-      overflow: hidden;
-      animation: fadeIn 1.5s ease;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(-30px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    .login-card::before {
-      content: '';
-      position: absolute;
-      top: -100px;
-      left: -100px;
-      width: 200px;
-      height: 200px;
-      background: radial-gradient(circle, rgba(0, 191, 255, 0.5), transparent);
-      filter: blur(60px);
-      animation: floatLight 6s infinite ease-in-out alternate;
-    }
-
-    @keyframes floatLight {
-      0% { transform: translate(0, 0); }
-      100% { transform: translate(100px, 100px); }
-    }
-
-    .login-card h2 {
-      text-align: center;
-      margin-bottom: 20px;
-      font-weight: 600;
-      letter-spacing: 1px;
-    }
-
-    .form-control {
-      background: rgba(255, 255, 255, 0.15);
-      border: none;
-      color: #fff;
-      border-radius: 10px;
-      padding-left: 40px;
-    }
-
-    .form-control:focus {
-      box-shadow: 0 0 10px #00d4ff;
-      background: rgba(255, 255, 255, 0.2);
-      color: #fff;
-    }
-
-    .input-group-text {
-      background: transparent;
-      border: none;
-      color: #00d4ff;
-      font-size: 1.3rem;
-    }
-
-    .btn-login {
-      background: linear-gradient(45deg, #00d4ff, #007bff);
-      border: none;
-      border-radius: 10px;
-      width: 100%;
-      font-weight: bold;
-      letter-spacing: 1px;
-      transition: 0.3s;
-    }
-
-    .btn-login:hover {
-      background: linear-gradient(45deg, #007bff, #00d4ff);
-      transform: scale(1.05);
-      box-shadow: 0 0 15px #00d4ff;
-    }
-
-    .links {
-      text-align: center;
-      margin-top: 15px;
-    }
-
-    .links a {
-      color: #00d4ff;
-      text-decoration: none;
-      transition: 0.3s;
-    }
-
-    .links a:hover {
-      text-shadow: 0 0 10px #00d4ff;
-    }
-
-    .brand {
-      text-align: center;
-      font-size: 2rem;
-      font-weight: bold;
-      margin-bottom: 20px;
-      color: #00d4ff;
-      letter-spacing: 2px;
-    }
-  </style>
-</head>
-
-<body>
-  <div class="login-card">
-    <div class="brand"><i class="bi bi-shield-lock"></i> SecureLogin</div>
-    <h2>Welcome Back</h2>
-    <form>
-      <div class="mb-3 input-group">
-        <span class="input-group-text"><i class="bi bi-person"></i></span>
-        <input type="text" class="form-control" placeholder="Username" required>
-      </div>
-
-      <div class="mb-3 input-group">
-        <span class="input-group-text"><i class="bi bi-key"></i></span>
-        <input type="password" class="form-control" placeholder="Password" required>
-      </div>
-
-      <div class="form-check text-light mb-3">
-        <input type="checkbox" class="form-check-input" id="remember">
-        <label for="remember" class="form-check-label">Remember me</label>
-      </div>
-
-      <button type="submit" class="btn btn-login py-2">LOGIN</button>
-    </form>
-
-    <div class="links mt-3">
-      <a href="#">Forgot Password?</a><br>
-      <a href="#">Create an Account</a>
-    </div>
-  </div>
-
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-</body>
 </html>
