--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>D'Programmers</title>
   </head>
   <body>
-    <a href="">Ejay</a>
+    <a href="pages/ejay.html">Ejay</a>
     <a href="">Amiel</a>
     <a href="">Justine</a>
     <a href="">Nhel</a>
