--- a/index.html
+++ b/index.html
@@ -1,171 +1,151 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Futuristic Login</title>
-
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- Icons -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>The Legends Showcase</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
   <style>
     body {
-      height: 100vh;
-      background: linear-gradient(135deg, #1e1e2f, #2a2a72, #009ffd);
-      background-size: 400% 400%;
-      animation: gradientFlow 10s ease infinite;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      background: radial-gradient(circle at top, #0a0a0a 0%, #000 100%);
+      color: #fff;
       font-family: 'Poppins', sans-serif;
+      overflow-x: hidden;
+      min-height: 100vh;
+    }
+
+    .title {
+      text-align: center;
+      font-family: 'Orbitron', sans-serif;
+      font-size: 3rem;
+      color: #00ffe5;
+      text-shadow: 0 0 20px #00fff2, 0 0 40px #00fff2;
+      margin-top: 50px;
+      letter-spacing: 3px;
+      animation: glowTitle 2s infinite alternate;
+    }
+
+    @keyframes glowTitle {
+      from { text-shadow: 0 0 10px #00fff2; }
+      to { text-shadow: 0 0 30px #00fff2, 0 0 60px #00fff2; }
+    }
+
+    .card {
+      background: rgba(255, 255, 255, 0.05);
+      border: 2px solid rgba(255, 255, 255, 0.1);
+      border-radius: 20px;
+      backdrop-filter: blur(10px);
+      transition: 0.4s ease-in-out;
+      box-shadow: 0 0 15px rgba(0, 255, 255, 0.2);
+    }
+
+    .card:hover {
+      transform: translateY(-10px) scale(1.05);
+      border-color: #00fff2;
+      box-shadow: 0 0 25px #00fff2;
+    }
+
+    .card-title {
+      font-size: 2rem;
+      font-weight: 700;
+      color: #fff;
+      text-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+    }
+
+    .nickname {
+      font-size: 1.2rem;
+      color: #00fff2;
+      text-transform: uppercase;
+      letter-spacing: 2px;
+      text-shadow: 0 0 10px #00fff2;
+    }
+
+    .glow-border {
+      position: relative;
       overflow: hidden;
     }
 
-    @keyframes gradientFlow {
+    .glow-border::before {
+      content: '';
+      position: absolute;
+      top: -2px;
+      left: -2px;
+      right: -2px;
+      bottom: -2px;
+      background: linear-gradient(45deg, #00fff2, #ff00ff, #ffcc00, #00fff2);
+      background-size: 400%;
+      z-index: -1;
+      filter: blur(10px);
+      animation: borderGlow 6s linear infinite;
+    }
+
+    @keyframes borderGlow {
       0% { background-position: 0% 50%; }
       50% { background-position: 100% 50%; }
       100% { background-position: 0% 50%; }
     }
 
-    .login-card {
-      background: rgba(255, 255, 255, 0.1);
-      backdrop-filter: blur(15px);
-      border: 1px solid rgba(255, 255, 255, 0.2);
-      border-radius: 20px;
-      box-shadow: 0 0 40px rgba(0, 0, 0, 0.5);
-      width: 400px;
-      padding: 40px;
-      color: white;
-      position: relative;
-      overflow: hidden;
-      animation: fadeIn 1.5s ease;
+    .character-icon {
+      font-size: 4rem;
+      text-shadow: 0 0 20px #fff;
     }
 
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(-30px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    .login-card::before {
-      content: '';
-      position: absolute;
-      top: -100px;
-      left: -100px;
-      width: 200px;
-      height: 200px;
-      background: radial-gradient(circle, rgba(0, 191, 255, 0.5), transparent);
-      filter: blur(60px);
-      animation: floatLight 6s infinite ease-in-out alternate;
-    }
-
-    @keyframes floatLight {
-      0% { transform: translate(0, 0); }
-      100% { transform: translate(100px, 100px); }
-    }
-
-    .login-card h2 {
-      text-align: center;
-      margin-bottom: 20px;
-      font-weight: 600;
-      letter-spacing: 1px;
-    }
-
-    .form-control {
-      background: rgba(255, 255, 255, 0.15);
-      border: none;
-      color: #fff;
-      border-radius: 10px;
-      padding-left: 40px;
-    }
-
-    .form-control:focus {
-      box-shadow: 0 0 10px #00d4ff;
-      background: rgba(255, 255, 255, 0.2);
-      color: #fff;
-    }
-
-    .input-group-text {
-      background: transparent;
-      border: none;
-      color: #00d4ff;
-      font-size: 1.3rem;
-    }
-
-    .btn-login {
-      background: linear-gradient(45deg, #00d4ff, #007bff);
-      border: none;
-      border-radius: 10px;
-      width: 100%;
-      font-weight: bold;
-      letter-spacing: 1px;
-      transition: 0.3s;
-    }
-
-    .btn-login:hover {
-      background: linear-gradient(45deg, #007bff, #00d4ff);
-      transform: scale(1.05);
-      box-shadow: 0 0 15px #00d4ff;
-    }
-
-    .links {
-      text-align: center;
-      margin-top: 15px;
-    }
-
-    .links a {
-      color: #00d4ff;
-      text-decoration: none;
-      transition: 0.3s;
-    }
-
-    .links a:hover {
-      text-shadow: 0 0 10px #00d4ff;
-    }
-
-    .brand {
-      text-align: center;
-      font-size: 2rem;
-      font-weight: bold;
-      margin-bottom: 20px;
-      color: #00d4ff;
-      letter-spacing: 2px;
+    .card-body {
+      padding: 2rem;
     }
   </style>
 </head>
-
 <body>
-  <div class="login-card">
-    <div class="brand"><i class="bi bi-shield-lock"></i> SecureLogin</div>
-    <h2>Welcome Back</h2>
-    <form>
-      <div class="mb-3 input-group">
-        <span class="input-group-text"><i class="bi bi-person"></i></span>
-        <input type="text" class="form-control" placeholder="Username" required>
+
+  <div class="container py-5">
+    <div class="title">🔥 Team Legends Showcase 🔥</div>
+    <div class="row justify-content-center mt-5 gy-4">
+
+      <div class="col-md-3">
+        <div class="card glow-border text-center p-3">
+          <div class="card-body">
+            <div class="character-icon">🎮</div>
+            <h3 class="card-title mt-3">Henry</h3>
+            <p class="nickname">(Tekken God)</p>
+          </div>
+        </div>
       </div>
 
-      <div class="mb-3 input-group">
-        <span class="input-group-text"><i class="bi bi-key"></i></span>
-        <input type="password" class="form-control" placeholder="Password" required>
+      <div class="col-md-3">
+        <div class="card glow-border text-center p-3">
+          <div class="card-body">
+            <div class="character-icon">🇹🇼</div>
+            <h3 class="card-title mt-3">Amiel</h3>
+            <p class="nickname">(Taiwanese)</p>
+          </div>
+        </div>
       </div>
 
-      <div class="form-check text-light mb-3">
-        <input type="checkbox" class="form-check-input" id="remember">
-        <label for="remember" class="form-check-label">Remember me</label>
+      <div class="col-md-3">
+        <div class="card glow-border text-center p-3">
+          <div class="card-body">
+            <div class="character-icon">🔥</div>
+            <h3 class="card-title mt-3">Nhel</h3>
+            <p class="nickname">(Orayt)</p>
+          </div>
+        </div>
       </div>
 
-      <button type="submit" class="btn btn-login py-2">LOGIN</button>
-    </form>
+      <div class="col-md-3">
+        <div class="card glow-border text-center p-3">
+          <div class="card-body">
+            <div class="character-icon">🎤</div>
+            <h3 class="card-title mt-3">Ejay</h3>
+            <p class="nickname">(Flow E)</p>
+          </div>
+        </div>
+      </div>
 
-    <div class="links mt-3">
-      <a href="#">Forgot Password?</a><br>
-      <a href="#">Create an Account</a>
     </div>
   </div>
 
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
