--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Legends Showcase</title>
+    <title>Xayona Web</title>
     <link href="" rel="stylesheet">
     <link href="" rel="stylesheet">
   </head>
