--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 <body>
   <header>
     <div class="logo">
-      <img src="COOK WEB LAYOUT/images/logo.jpg" alt="Logo">
+      <img src="images/logo.jpg" alt="Logo">
     </div>
     <nav>
       <a href="#">Home</a>
@@ -290,12 +290,12 @@
 
   <section class="hero">
     <div class="chef">
-      <img src="COOK WEB LAYOUT/images/bg-page.png" alt="Chef Image">
+      <img src="images/bg-page.png" alt="Chef Image">
     </div>
     <div class="download">
       <h2>Download the game that started it all!</h2>
       <div class="phone">
-        <img src="COOK WEB LAYOUT/images/smartphone.png" alt="Phone Preview">
+        <img src="images/smartphone.png" alt="Phone Preview">
       </div>
       <button>Click Here!</button>
     </div>
@@ -317,21 +317,21 @@
   <section class="news">
     <h3>NEWS</h3>
     <div class="news-item">
-      <img src="COOK WEB LAYOUT/images/news1.jpg" alt="">
+      <img src="images/news1.jpg" alt="">
       <div>
         <h4>News title one</h4>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur quam nulla.</p>
       </div>
     </div>
     <div class="news-item">
-      <img src="COOK WEB LAYOUT/images/news2.jpg" alt="">
+      <img src="images/news2.jpg" alt="">
       <div>
         <h4>News title two</h4>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur quam nulla.</p>
       </div>
     </div>
     <div class="news-item">
-      <img src="COOK WEB LAYOUT/images/news3.jpg" alt="">
+      <img src="images/news3.jpg" alt="">
       <div>
         <h4>News title three</h4>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur quam nulla.</p>
@@ -340,10 +340,10 @@
   </section>
 
   <section class="gallery">
-    <img src="COOK WEB LAYOUT/images/gallery1.jpg" alt="">
-    <img src="COOK WEB LAYOUT/images/gallery2.jpg" alt="">
-    <img src="COOK WEB LAYOUT/images/gallery3.jpg" alt="">
-    <img src="COOK WEB LAYOUT/images/gallery4.jpg" alt="">
+    <img src="images/gallery1.jpg" alt="">
+    <img src="images/gallery2.jpg" alt="">
+    <img src="images/gallery3.jpg" alt="">
+    <img src="images/gallery4.jpg" alt="">
   </section>
 
   <footer>
