--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cookaka</title>
 
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
   <!-- Bootstrap Icons -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
 
@@ -24,12 +27,7 @@
       color: #333;
     }
 
-    img {
-      display: block;
-      max-width: 100%;
-      height: auto;
-    }
-
+    /* Header */
     header {
       background-color: #ddebf4;
       display: flex;
@@ -38,44 +36,32 @@
       padding: 15px 60px;
     }
 
-    .logo img {
-      height: 60px;
-      width: auto;
-    }
-
     nav a {
       margin-left: 25px;
       font-weight: 600;
       color: #444;
       text-decoration: none;
-      transition: color 0.3s;
     }
 
     nav a:hover {
       color: #c41c1c;
     }
 
-    /* --- Hero Section --- */
+    /* Hero Section */
     .hero {
       background: #f8c32c;
       padding: 40px 80px;
       display: flex;
       align-items: center;
       justify-content: center;
-      gap: 40px;
+      gap: 30px;
       flex-wrap: wrap;
-    }
-
-    .chef {
-      flex: 1;
-      text-align: left;
     }
 
     .chef img {
       width: 85%;
-      max-width: 1000px;
+      max-width: 500px;
       height: auto;
-      object-fit: contain;
     }
 
     .download {
@@ -86,7 +72,7 @@
     .download h2 {
       font-family: 'Kaushan Script', cursive;
       color: #a6141e;
-      font-size: 1.9em;
+      font-size: 1.8em;
       margin-bottom: 25px;
     }
 
@@ -99,45 +85,70 @@
       padding: 10px;
       width: 290px;
       height: 165px;
-      margin-bottom: 20px;
+      margin-bottom: 15px;
       box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
     }
 
     .phone img {
       width: 100%;
       height: 100%;
-      object-fit: cover;
       border-radius: 20px;
+      object-fit: cover;
     }
 
-    .download button {
+    /* Buttons under phone */
+    .button-group {
+      display: flex;
+      gap: 15px;
+      align-items: center;
+    }
+
+    .view-more {
+      background-color: #d2a617;
+      border: none;
+      color: #3c2805;
+      padding: 12px 20px;
+      border-radius: 8px;
+      font-weight: 600;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      cursor: pointer;
+      transition: all 0.3s;
+      box-shadow: inset 0 -3px 0 #b28910;
+    }
+
+    .view-more:hover {
+      background-color: #c39a12;
+    }
+
+    .click-here {
       background-color: #c41c1c;
       color: white;
       border: none;
       padding: 12px 25px;
-      font-family: 'Poppins', sans-serif;
-      font-weight: 600;
-      border-radius: 8px;
+      font-family: 'Kaushan Script', cursive;
+      font-size: 1.2em;
+      border-radius: 10px;
       cursor: pointer;
       transition: background 0.3s;
-      font-size: 1em;
+      box-shadow: inset 0 -3px 0 #8f1111;
     }
 
-    .download button:hover {
+    .click-here:hover {
       background-color: #a6141e;
     }
 
-    /* --- About --- */
+    /* About */
     .about {
       max-width: 800px;
       margin: 30px auto;
       text-align: center;
-      line-height: 1.6;
       color: #4b4b4b;
       padding: 0 20px;
     }
 
-    /* --- Follow Section --- */
+    /* Follow Us */
     .follow {
       background: #e3b822;
       text-align: center;
@@ -152,12 +163,13 @@
     }
 
     .social-icons a {
-      display: inline-block;
-      width: 40px;
-      height: 40px;
-      background: #c41c1c;
       color: white;
-      line-height: 40px;
+      background-color: #c41c1c;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      width: 42px;
+      height: 42px;
       border-radius: 50%;
       margin: 6px;
       font-size: 18px;
@@ -165,10 +177,10 @@
     }
 
     .social-icons a:hover {
-      background: #a6141e;
+      background-color: #a6141e;
     }
 
-    /* --- News Section --- */
+    /* News */
     .news {
       background: #ddebf4;
       width: 85%;
@@ -182,10 +194,10 @@
       background: #c41c1c;
       color: white;
       padding: 8px 20px;
-      display: inline-block;
       border-radius: 5px;
       margin-bottom: 25px;
       letter-spacing: 2px;
+      display: inline-block;
     }
 
     .news-item {
@@ -214,25 +226,9 @@
     .news-item p {
       font-size: 0.9em;
       color: #555;
-      line-height: 1.5;
     }
 
-    .gcash-btn {
-      display: inline-block;
-      background-color: #0070ba;
-      color: white;
-      padding: 10px 20px;
-      border-radius: 8px;
-      text-decoration: none;
-      font-weight: 600;
-      transition: background 0.3s;
-    }
-
-    .gcash-btn:hover {
-      background-color: #005c99;
-    }
-
-    /* --- Gallery Section --- */
+    /* Gallery */
     .gallery {
       display: flex;
       justify-content: center;
@@ -245,10 +241,10 @@
     .gallery img {
       width: 160px;
       height: 160px;
-      object-fit: cover;
       border-radius: 10px;
       border: 3px solid white;
-      transition: transform 0.3s ease;
+      transition: transform 0.3s;
+      object-fit: cover;
     }
 
     .gallery img:hover {
@@ -261,30 +257,25 @@
       padding: 15px;
       font-size: 0.9em;
       color: #555;
-      margin-top: 20px;
     }
 
     @media (max-width: 900px) {
       .hero {
         flex-direction: column;
         text-align: center;
-        gap: 20px;
       }
-      .chef, .download {
-        text-align: center;
-      }
-      .phone {
-        width: 80%;
-        height: 200px;
+      .chef img {
+        width: 70%;
       }
     }
   </style>
 </head>
-
 <body>
+
+  <!-- Header -->
   <header>
     <div class="logo">
-      <img src="images/logo.jpg" alt="Logo">
+      <img src="images/logo.jpg" alt="Logo" style="height:60px;">
     </div>
     <nav>
       <a href="#">Home</a>
@@ -294,6 +285,7 @@
     </nav>
   </header>
 
+  <!-- Hero Section -->
   <section class="hero">
     <div class="chef">
       <img src="images/bg-page.png" alt="Chef Image">
@@ -303,24 +295,32 @@
       <div class="phone">
         <img src="images/smartphone.png" alt="Phone Preview">
       </div>
-      <button>Click Here!</button>
+
+      <div class="button-group">
+        <button class="view-more">
+          <i class="bi bi-wallet2"></i> View More
+        </button>
+        <button class="click-here">Click Here!</button>
+      </div>
     </div>
   </section>
 
+  <!-- About -->
   <div class="about">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur quam nulla, aliquet quis tincidunt in, convallis vel leo. Ut felis purus, pulvinar at adipiscing ut, gravida in lorem. Pellentesque eu nisi nec purus blandit blandit.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur quam nulla, aliquet quis tincidunt in, convallis vel leo. Ut felis purus, pulvinar at adipiscing ut, gravida in lorem.</p>
   </div>
 
+  <!-- Follow Us -->
   <section class="follow">
     <h3>FOLLOW US</h3>
     <div class="social-icons">
-      <a href="#"><i class="bi bi-facebook"></i></a>
       <a href="#"><i class="bi bi-twitter"></i></a>
-      <a href="#"><i class="bi bi-instagram"></i></a>
+      <a href="#"><i class="bi bi-facebook"></i></a>
       <a href="#"><i class="bi bi-google"></i></a>
     </div>
   </section>
 
+  <!-- News -->
   <section class="news">
     <h3>NEWS</h3>
     <div class="news-item">
@@ -328,7 +328,6 @@
       <div>
         <h4>News title one</h4>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur quam nulla.</p>
-        <a href="#" class="gcash-btn"><i class="bi bi-eye"></i> View More</a>
       </div>
     </div>
     <div class="news-item">
@@ -336,19 +335,11 @@
       <div>
         <h4>News title two</h4>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur quam nulla.</p>
-        <a href="#" class="gcash-btn"><i class="bi bi-eye"></i> View More</a>
-      </div>
-    </div>
-    <div class="news-item">
-      <img src="images/news3.jpg" alt="">
-      <div>
-        <h4>News title three</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur quam nulla.</p>
-        <a href="#" class="gcash-btn"><i class="bi bi-eye"></i> View More</a>
       </div>
     </div>
   </section>
 
+  <!-- Gallery -->
   <section class="gallery">
     <img src="images/gallery1.jpg" alt="">
     <img src="images/gallery2.jpg" alt="">
@@ -356,8 +347,12 @@
     <img src="images/gallery4.jpg" alt="">
   </section>
 
+  <!-- Footer -->
   <footer>
-    <p>&copy; 2025. Company name all rights reserved.</p>
+    <p>&copy; Copyright © 2025. Company name all rights reserved.</p>
   </footer>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
