--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
     }
 
     .chef-img {
-      width: 230px;
+      width: 730px;
       position: relative;
       z-index: 1;
-      margin-right: -100px; /* overlap amount */
+      margin-right: -500px; /* overlap amount */
     }
 
     .phone-img {
@@ -261,7 +261,7 @@
 
       .chef-img {
         margin-right: 0;
-        margin-bottom: -40px; /* overlap on smaller screens */
+        margin-bottom: -40px;
       }
     }
   </style>
@@ -324,6 +324,13 @@
     </div>
     <div class="news-item">
       <img src="images/news2.jpg" alt="">
+      <div>
+        <h4>News title two</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur quam nulla.</p>
+      </div>
+    </div>
+    <div class="news-item">
+      <img src="images/news3.jpg" alt="">
       <div>
         <h4>News title two</h4>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur quam nulla.</p>
