--- a/index.html
+++ b/index.html
@@ -256,17 +256,14 @@
 <body>
 
   <!-- Header -->
-  <header>
-    <div class="logo">
-      <img src="images/logo.jpg" alt="Logo" style="height:60px;">
-    </div>
-    <nav>
-      <a href="#">Home</a>
-      <a href="#">About</a>
-      <a href="#">News</a>
-      <a href="#">Gallery</a>
-    </nav>
-  </header>
+  <header id="header"></header>
+  <script>
+    fetch("/pages/header.html")
+      .then(response => response.text())
+      .then(data => {
+        document.getElementById("header").innerHTML = data;
+      });
+  </script>
 
   <!-- Hero Section -->
   <section class="hero">
