--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       width: 1800px;
       position: relative;
       z-index: 1;
-      margin-right: -500px; /* overlap amount */
+      margin-right: -60%; /* overlap amount */
     }
 
     .phone-img {
