--- a/pages/about.html
+++ b/pages/about.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cookaka</title>
+  <title>Cookaka - About</title>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
 
+  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
   <style>
@@ -45,7 +45,7 @@
       color: #c41c1c;
     }
 
-
+    /* Hero section */
     .chef-phone-wrapper {
       display: flex;
       justify-content: center;
@@ -117,15 +117,6 @@
       background-color: #a6141e;
     }
 
-    /* About */
-    .about {
-      max-width: 800px;
-      margin: 30px auto;
-      text-align: center;
-      color: #4b4b4b;
-      padding: 0 20px;
-    }
-
     /* Follow Us */
     .follow {
       background: #e3b822;
@@ -158,78 +149,6 @@
       background-color: #a6141e;
     }
 
-    /* News */
-    .news {
-      background: #ddebf4;
-      width: 85%;
-      margin: auto;
-      padding: 30px 25px;
-      border-radius: 10px;
-      box-shadow: 0 3px 8px rgba(0, 0, 0, 0.1);
-    }
-
-    .news h3 {
-      background: #c41c1c;
-      color: white;
-      padding: 8px 20px;
-      border-radius: 5px;
-      margin-bottom: 25px;
-      letter-spacing: 2px;
-      display: inline-block;
-    }
-
-    .news-item {
-      display: flex;
-      align-items: flex-start;
-      margin-bottom: 20px;
-      border-bottom: 1px solid #ccc;
-      padding-bottom: 15px;
-      flex-wrap: wrap;
-    }
-
-    .news-item img {
-      width: 90px;
-      height: 90px;
-      margin-right: 20px;
-      border-radius: 10px;
-      object-fit: cover;
-    }
-
-    .news-item h4 {
-      font-family: 'Kaushan Script', cursive;
-      color: #c41c1c;
-      font-weight: 600;
-      margin-bottom: 5px;
-    }
-
-    .news-item p {
-      font-size: 0.9em;
-      color: #555;
-    }
-
-    /* Gallery */
-    .gallery {
-      display: flex;
-      justify-content: center;
-      background: linear-gradient(to right, #a6141e, #c41c1c);
-      padding: 25px 10px;
-      flex-wrap: wrap;
-      gap: 20px;
-    }
-
-    .gallery img {
-      width: 160px;
-      height: 160px;
-      border-radius: 10px;
-      border: 3px solid white;
-      transition: transform 0.3s;
-      object-fit: cover;
-    }
-
-    .gallery img:hover {
-      transform: scale(1.05);
-    }
-
     footer {
       background: #ddebf4;
       text-align: center;
@@ -238,15 +157,66 @@
       color: #555;
     }
 
+    /* ABOUT SECTION */
+    .about-section {
+      background: #ddebf4;
+      width: 85%;
+      margin: 50px auto;
+      padding: 30px 25px;
+      border-radius: 10px;
+      box-shadow: 0 3px 8px rgba(0, 0, 0, 0.1);
+      position: relative;
+    }
+
+    .about-title {
+      background: #c41c1c;
+      color: white;
+      padding: 8px 25px;
+      border-radius: 5px;
+      font-weight: bold;
+      letter-spacing: 2px;
+      display: inline-block;
+      position: absolute;
+      top: -20px;
+      left: 50%;
+      transform: translateX(-50%);
+      box-shadow: 0 4px 0 #9c1616;
+    }
+
+    .about-section h5 {
+      color: #1f1f1f;
+      font-weight: 600;
+      margin-top: 20px;
+      font-size: 1rem;
+    }
+
+    .about-section p {
+      font-size: 0.9em;
+      color: #1b1b1b;
+      margin-top: 8px;
+    }
+
+    .about-section a {
+      color: #313131;
+      text-decoration: underline;
+    }
+
+    .about-section a:hover {
+      color: #000000;
+    }
+
     @media (max-width: 900px) {
       .chef-phone-wrapper {
         flex-direction: column;
-        margin-right: 0;
       }
 
       .chef-img {
         margin-right: 0;
         margin-bottom: -40px;
+      }
+
+      .about-section {
+        width: 95%;
       }
     }
   </style>
@@ -257,7 +227,7 @@
   <!-- Header -->
   <header id="header"></header>
   <script>
-    fetch("snippets/header.html")
+    fetch("../snippets/header.html")
       .then(response => response.text())
       .then(data => {
         document.getElementById("header").innerHTML = data;
@@ -265,11 +235,10 @@
   </script>
 
   <!-- Hero Section -->
-  <section class="hero">
-
+  <section class="hero text-center">
     <div class="chef-phone-wrapper">
-      <img src="images/bg-page.png" alt="Chef" class="chef-img">
-      <img src="images/smartphone.png" alt="Phone" class="phone-img">
+      <img src="../images/bg-page.png" alt="Chef" class="chef-img">
+      <img src="../images/smartphone.png" alt="Phone" class="phone-img">
     </div>
 
     <div class="button-group">
@@ -279,12 +248,6 @@
       <button class="click-here">Click Here!</button>
     </div>
   </section>
-
-  <!-- About -->
-  <div class="about">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur quam nulla, aliquet quis tincidunt in,
-      convallis vel leo. Ut felis purus, pulvinar at adipiscing ut, gravida in lorem.</p>
-  </div>
 
   <!-- Follow Us -->
   <section class="follow">
@@ -296,38 +259,21 @@
     </div>
   </section>
 
-  <!-- News -->
-  <section class="news">
-    <h3>NEWS</h3>
-    <div class="news-item">
-      <img src="images/news1.jpg" alt="">
-      <div>
-        <h4>News title one</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur quam nulla.</p>
-      </div>
-    </div>
-    <div class="news-item">
-      <img src="images/news2.jpg" alt="">
-      <div>
-        <h4>News title two</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur quam nulla.</p>
-      </div>
-    </div>
-    <div class="news-item">
-      <img src="images/news3.jpg" alt="">
-      <div>
-        <h4>News title two</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur quam nulla.</p>
-      </div>
-    </div>
-  </section>
+  <!-- ABOUT SECTION -->
+  <section class="about-section">
+    <div class="about-title">ABOUT</div>
 
-  <!-- Gallery -->
-  <section class="gallery">
-    <img src="images/gallery1.jpg" alt="">
-    <img src="images/gallery2.jpg" alt="">
-    <img src="images/gallery3.jpg" alt="">
-    <img src="images/gallery4.jpg" alt="">
+    <h5>We Have Free Templates for Everyone</h5>
+    <p>Our website templates are created with great inspiration, checked for quality and originality, and meticulously sliced and coded. What’s more, they’re absolutely free! You can do a lot with them. You may modify them and even use them to design websites for clients, as long as you agree with the <a href="#">Terms of Use</a>.</p>
+
+    <h5>We Have More Templates for You</h5>
+    <p>Looking for more templates? Browse through all our <a href="#">Free Website Templates</a> and find what suits you best. If you don’t find an appropriate template, check out our premium templates or participate in our discussion forum to request custom designs.</p>
+
+    <h5>Be Part of Our Community</h5>
+    <p>If you have questions or concerns about this website template, join the discussion on our forum and meet other people who share the same passion for design and creativity.</p>
+
+    <h5>Template Details</h5>
+    <p>Design Version 3 | Website Template design by <a href="#">Free Website Templates</a>.</p>
   </section>
 
   <!-- Footer -->
@@ -335,7 +281,6 @@
     <p>&copy; Copyright © 2025. Company name all rights reserved.</p>
   </footer>
 
-  <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
