--- a/snippets/header.html
+++ b/snippets/header.html
@@ -11,8 +11,8 @@
 
                               <div class="nav-list">
                                         <ul>
-                                                  <li><a href="">Home</a></li>
-                                                  <li><a href="">About</a></li>
+                                                  <li><a href="../index.html">Home</a></li>
+                                                  <li><a href="../pages/about.html">About</a></li>
                                                   <li><a href="">News</a></li>
                                                   <li><a href="">Gallery</a></li>
                                         </ul>
