--- a/pages/about.html
+++ b/pages/about.html
@@ -55,19 +55,19 @@
     }
 
     .chef-phone-wrapper img {
-      max-width: 100%;
+      max-width: 200%;
       height: auto;
     }
 
     .chef-img {
-      width: 1800px;
+      width: 120%;
       position: relative;
       z-index: 1;
-      margin-right: -60%; /* overlap amount */
+      margin-right: -90%;
     }
 
     .phone-img {
-      width: 1000px;
+      width: 70%;
       position: relative;
       z-index: 2;
     }
