--- a/index.html
+++ b/index.html
@@ -21,7 +21,17 @@
         });
     </script>
   </header>
-  
+
+  <!-- Hero Section -->
+  <section class="hero">
+
+    <div class="chef-phone-wrapper">
+      <img src="images/bg-page.png" alt="Chef" class="chef-img">
+      <img src="images/smartphone.png" alt="Phone" class="phone-img">
+    </div>
+
+  </section>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
