--- a/snippets/header.html
+++ b/snippets/header.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
           <head>
                     <meta charset="UTF-8">
                     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                    <link rel="stylesheet" href="/style/header.css">
+                    <link rel="stylesheet" href="style/header.css">
+                    
           </head>
+
           <body>
                     <header>
-                              <img src="/images/logo.jpg" alt="logo ng cookaka">
+                              <div class="header-wrapper">
+                                        <img src="/images/logo.jpg" alt="logo ng cookaka">
 
-                              <div class="nav-list">
-                                        <ul>
-                                                  <li><a href="../index.html">Home</a></li>
-                                                  <li><a href="../pages/about.html">About</a></li>
-                                                  <li><a href="">News</a></li>
-                                                  <li><a href="">Gallery</a></li>
-                                        </ul>
+                                        <div class="nav-list">
+                                                  <ul>
+                                                            <li><a href="../index.html">Home</a></li>
+                                                            <li><a href="../pages/about(ejay).html">About</a></li>
+                                                            <li><a href="">News</a></li>
+                                                            <li><a href="">Gallery</a></li>
+                                                  </ul>
+                                        </div>
                               </div>
                     </header>
           </body>
+
 </html>
