--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
           document.getElementById("header").innerHTML = data;
         });
     </script>
+    <div>
+      <img src="images/bg-page.png" alt="chef" class="chef">
+      <img src="images/smartphone.png" alt="smartphone" class="smartphone">
+    </div>
   
   
 </body>
