--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           document.getElementById("header").innerHTML = data;
         });
     </script>
-    <div>
+    <div class="container">
       <img src="images/bg-page.png" alt="chef" class="chef">
       <img src="images/smartphone.png" alt="smartphone" class="smartphone">
     </div>
