--- a/snippets/header.html
+++ b/snippets/header.html
@@ -11,12 +11,12 @@
           <body>
                     <header>
                               <div class="header-wrapper">
-                                        <img src="/images/logo.jpg" alt="logo ng cookaka">
+                                        <img src="/images/logo.jpg" alt="logo ng cookaka" class="cookako">
 
                                         <div class="nav-list">
                                                   <ul>
                                                             <li><a href="../index.html">Home</a></li>
-                                                            <li><a href="../pages/about(ejay).html">About</a></li>
+                                                            <li><a href="../pages/about.html">About</a></li>
                                                             <li><a href="">News</a></li>
                                                             <li><a href="">Gallery</a></li>
                                                   </ul>
