--- a/snippets/header.html
+++ b/snippets/header.html
@@ -17,7 +17,7 @@
                                                   <ul>
                                                             <li><a href="../index.html">Home</a></li>
                                                             <li><a href="../pages/about(ejay).html">About</a></li>
-                                                            <li><a href="">News</a></li>
+                                                            <li><a href="../pages/news.html">News</a></li>
                                                             <li><a href="">Gallery</a></li>
                                                   </ul>
                                         </div>
