--- a/index.html
+++ b/index.html
@@ -39,12 +39,34 @@
         aliquid illo mollitia harum aspernatur
         necessitatibus accusamus dolorum, sapiente
         itaque! Saepe. Lorem ipsum dolor sit amet.</pre>
-      <img src="images/follow.png" alt="follow" class="follow">
+        <div class="following">
+          <img src="images/follow.png" alt="follow" class="follow">
+          <p class="flowe">FOLLOW US</p>
+          <img src="images/twitter.png" alt="twitter">
+          <img src="images/facebook.png" alt="facebook">
+          <img src="images/google.png" alt="google">
+        </div>
     </div>
 
+    <div>
+      <img src="images/viewmore.png" alt="viewmore">
+      <img src="images/clickhere.png" alt="clickhere">
+    </div>
+  
+    <div>
+      <img src="images/interface copy.png" alt="news">
+      <img src="images/news1.jpg" alt="news1">
+      <img src="images/news2.jpg" alt="news2">
+      <img src="images/news3.jpg" alt="news3">
+    </div>
 
-  
-  
+    <div>
+      <img src="images/redcolumn.png" alt="gallery">
+      <img src="images/home-gallery1.jpg" alt="home-gallery1">
+      <img src="images/home-gallery2.jpg" alt="home-gallery2">
+      <img src="images/home-gallery3.jpg" alt="home-gallery3">
+      <img src="images/home-gallery4.jpg" alt="home-gallery4">
+    </div>
 </body>
 
 </html>
