--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <img src="images/smartphone.png" alt="smartphone" class="smartphone">
     </div>
 
-    <div class="follows">
+    <div class="container2">
       <pre>
         Lorem ipsum dolor sit amet, consectetur
         adipisicing elit. Error, veritatis?
@@ -39,14 +39,14 @@
         aliquid illo mollitia harum aspernatur
         necessitatibus accusamus dolorum, sapiente
         itaque! Saepe. Lorem ipsum dolor sit amet.</pre>
-        <div class="following">
+    </div>
+        <div class="container3">
           <img src="images/follow.png" alt="follow" class="follow">
           <p class="flowe">FOLLOW US</p>
           <img src="images/twitter.png" alt="twitter">
           <img src="images/facebook.png" alt="facebook">
           <img src="images/google.png" alt="google">
         </div>
-    </div>
 
     <div>
       <img src="images/viewmore.png" alt="viewmore">
