--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
         <div class="container3">
           <img src="images/follow.png" alt="follow" class="follow">
           <p class="flowe">FOLLOW US</p>
-          <img src="images/twitter.png" alt="twitter">
-          <img src="images/facebook.png" alt="facebook">
-          <img src="images/google.png" alt="google">
-        </div>
+          <img src="images/twitter.png" alt="twitter" class="twitter">
+          <img src="images/facebook.png" alt="facebook" class="facebook">
+          <img src="images/google.png" alt="google" class="google">
+    </div>
 
     <div>
       <img src="images/viewmore.png" alt="viewmore">
