--- a/snippets/header.html
+++ b/snippets/header.html
@@ -18,7 +18,7 @@
                                                             <li><a href="../index.html">Home</a></li>
                                                             <li><a href="../pages/about.html">About</a></li>
                                                             <li><a href="../pages/news.html">News</a></li>
-                                                            <li><a href="">Gallery</a></li>
+                                                            <li><a href="../">Gallery</a></li>
                                                   </ul>
                                         </div>
                               </div>
