--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@
     <div class="container my-container">
       <div class="wrapper my-wrapper">
         <img src="images/bg-page.png" alt="chef" class="chef">
-        <div>
+        <div class="phone-wrapper">
         <img src="images/smartphone.png" alt="phone" class="phone">
-        <img src="images/viewmore.png" alt="">
-        <img src="images/clickhere.png" alt="">
+        <div class="vc-wrapper">
+        <img src="images/viewmore.png" alt="" class="viewmore">
+        <img src="images/clickhere.png" alt="" class="clickhere">
+        </div>
         </div>
       </div>
 
