--- a/index.html
+++ b/index.html
@@ -39,8 +39,20 @@
       <div class="container mid-container">
         <div class="wrapper mid-wrapper">
           <div class="firstmid-wrapper">
+            <div class="firstmid1-wrapper">
           <p class="txto">Lorem ipsum dolor sit amet consectetur, <br>adipisicing elit. Nihil nesciunt inventore <br>iure quis voluptatem modi explicabo in. <br> Deserunt, ab sapiente! Magnam totam <br>assumenda voluptatem eaque cumque <br> vero quae laborum consectetur! Quas <br> laborum, sunt maxime, dicta adipisci <br> doloribus mollitia fugiat porro aperiam <br>corporis incidunt similique! Eaque sapiente <br> inventore cumque ullam. Nam!</p>
-          <img src="images/follow.png" alt="">
+          </div>
+          <div class="firstmid2-wrapper">
+          <img src="images/follow.png" alt="" class="follow">
+          <p class="followtxt">FOLLOW US</p>
+          <div class="icons">
+            <div class="icons-wrapper">
+          <img src="images/twitter.png" alt="" class="twitter">
+          <img src="images/facebook.png" alt="" class="facebook">
+          <img src="images/google.png" alt="" class="google">
+          </div>
+          </div>
+          </div>
           </div>
           <div class="secondmid-wrapper">
             <img src="images/interface copy.png" alt="">
